k8s/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rapheebeauty
  namespace: rapheebeauty-ns
  labels:
    app: rapheebeauty
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rapheebeauty
  template:
    metadata:
      labels:
        app: rapheebeauty
    spec:
      containers:
        - name: rapheebeauty-latest
          image: idrisniyi94/rapheebeauty
          ports:
            - containerPort: 8000
          resources:
            limits:
              memory: "1000Mi"
              cpu: "500m"
            requests:
              memory: "500Mi"
              cpu: "250m"
