k8s/prod-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prod-raphee-beauty-service
  namespace: prod-namespace
spec:
  selector:
    app: prod-raphee-beauty-deployment
  ports:
  - port: 5000
    targetPort: 5000
    nodePort: 32002
  type: NodePort
