k8s/qa-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qa-raphee-beauty-service
  namespace: qa-namespace
spec:
  selector:
    app: qa-raphee-beauty-deployment
  ports:
  - port: 5000
    targetPort: 5000
    nodePort: 32003
  type: NodePort
