k8s/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: rapheebeauty-svc
  namespace: rapheebeauty-ns
spec:
  selector:
    app: rapheebeauty
  ports:
    - port: 8000
      targetPort: 8000
      # nodePort: 30009
  # type: NodePort
